  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.4.2.102 2002/03/25 15:46:32 sampo Exp $
==========================================================================

2.8000
------

2.8017.471  new: x86: P4 RC5 core (ak-p7)
            new: x86: Athlon RC5 core (re-pair III)
            imp: sparc: improved OGR core. (#2480)
            fix: macosx: memory leak in battery checking code on OS X. (#2465)
            fix: all: client ignores "--" on command line by itself. (#2474)
            imp: x86: better intel and amd chip identification. (#2448, #2424)
            fix: ppc: linux kernel cpu string additions. (#2407)
            fix: x86: Win2K, WinXP: disabled crashing RC5 SMC core. (#2399)
            fix: hpux: threading, timing fixes (#2371)
            new: macosx: platform-specific read me for OS X (#2580)
            fix: fbsd: Client doesn't respond to SIG(INT/TERM) occasionally (#1985)

2.8016.470  new: ppc: new AltiVec RC5 core for the PPC 7450 by Dan Oetting.

2.8015.469a (currently no [pre-]release builds, may get .470)
            fix: all: flushed when 1 packet was left in in-buffer (#2209).
            fix: all: time threshold ignored on command line -update (#2286).
            fix: all: packets lost by -import and unwritable buffers (#2298).
            imp: all: suppress logfile pollution with remote buffer errors.
            imp: macos: temperature sensing for dual G3 and G4 systems.
            fix: macosx: the 7450 is now correctly recognized as a G4 CPU.
            
2.8015.469  new: x86: two OGR cores now.
            new: x86/win16/win32/netware: added support for the RC5 SMC core.